# YAMScratch

./: .gitignore  .travis.yml  README.md
AdventOfCode/2019/go/: processor.go
AdventOfCode/rust/day-one/: Cargo.toml
AdventOfCode/rust/day-two/: Cargo.toml
CodeAbbey/: test_solutions.sh
CodeAbbey/c-sol/: Makefile  README.MD
CodeAbbey/cpp-sol/: Makefile
CodeAbbey/py-sol/: 13.py  15.py  20.py  28.py  41.py  7.py
CodeAbbey/rust-sol/: Cargo.toml
CodeAbbey/rust-sol/src/: 1.rs  10.rs  11.rs  135.rs  2.rs  3.rs  35.rs  4.rs  5.rs  6.rs  64.rs  7.rs  8.rs  87.rs  9.rs
CodeAbbey/rust-sol/src/util/: mod.rs  quicksort.rs
c-misc/: socket_server_example.c
c-misc/DS projects/: makefile
c-misc/trip_comp/: Makefile  build.sh  stage_0.cc  stage_1.cc
cpp-misc/: .ycm_extra_conf.py  remove_duplicates_linked_list.cpp
cpp-misc/dijkstra_2/: Makefile
cpp-misc/floyd_warshall/: Makefile
cpp-misc/maze_graph/: Makefile  maze_graph.cpp
cpp-misc/net-pong/: Makefile
cpp-misc/sorting/: Makefile
cpp-misc/string-manip/: Makefile
cpp-misc/varaidic_templates/: Makefile
cpp-misc/zero_mq/: config.sh
haskell/: infinite_reppl.hs  square_list.hs
matlab-misc/: TF_lab1.m  TF_lab2.m  TFhw1.m  msl_lab_1.m  piecewise_interpolator.m  validator_lin.m
matlab-misc/+mdo/: Swarm1.m  Swarm2.m  Swarm3.m  SwarmIterationHistory.m
python-misc/: extract_binary_image.py  hw5.py  key2_find.py  key_find.py  pwn200_helper.py  pwn300_helper.py  re200_helper.py  re300_helper.py  two-eggs.py  xor_find.py
python-misc/leetcode/: 135-candy.py  23-merge-k-sorted-lists.py
python-misc/slicer/: Cargo.toml  VectorMath.py
rust-misc/: argument_example.rs
rust-swagger-petstore/: Cargo.toml
rust-swagger-petstore/src/: handlers.rs  main.rs
rust-swagger-petstore/src/handlers/: mod.rs
rust-swagger-petstore/src/models/: category.rs  mod.rs  order.rs  pet.rs  tag.rs  user.rs
stata/: college_distance.do
(+50 files in other folders)
