[package]
name = "rust-swagger-petstore"
version = "0.1.0"
authors = ["YetAnotherMinion <yam@thinkalexandria.com>"]

[dependencies]
iron = "*"
urlencoded = "*"
logger = "*"
router = "*"
staticfile = "*"
rustc-serialize = "*"
hyper = "*"
url = "*"
env_logger = "*"
log = "*"
time = "*"
mime = "*"
mount = "*"
rand = "*"
postgres = "*"

