[package]
name = "rust-sol"
version = "0.1.0"
authors = ["YetAnotherMinion <yetanotherminion@gmail.com>"]

[dependencies]

[[bin]]
name = "1-sol"
path = "src/1.rs"

[[bin]]
name = "2-sol"
path = "src/2.rs"

[[bin]]
name = "3-sol"
path = "src/3.rs"

[[bin]]
name = "4-sol"
path = "src/4.rs"

[[bin]]
name = "5-sol"
path = "src/5.rs"

[[bin]]
name = "6-sol"
path = "src/6.rs"


[[bin]]
name = "8-sol"
path = "src/8.rs"
