[package]
name = "rust-sol"
version = "0.1.0"
authors = ["YetAnotherMinion <yetanotherminion@gmail.com>"]

[dependencies]

[[bin]]
name = "1-sol"
path = "src/1.rs"

[[bin]]
name = "2-sol"
path = "src/2.rs"

[[bin]]
name = "3-sol"
path = "src/3.rs"

[[bin]]
name = "4-sol"
path = "src/4.rs"

[[bin]]
name = "5-sol"
path = "src/5.rs"

[[bin]]
name = "6-sol"
path = "src/6.rs"

[[bin]]
name = "7-sol"
path = "src/7.rs"

[[bin]]
name = "8-sol"
path = "src/8.rs"

[[bin]]
name = "9-sol"
path = "src/9.rs"

[[bin]]
name = "35-sol"
path = "src/35.rs"

[[bin]]
name = "87-sol"
path = "src/87.rs"
